--- a/index.html
+++ b/index.html
@@ -43,10 +43,22 @@
                     <li><a href="#">LA CROLIPOLYSE</a></li>
                     <li><a href="#">LE SALON</a></li>
                     <li><a href="#">CONTACT ET RESERVATION</a></li>
-                    <figure id="burger">
-                        <img src="./img/menu (1).png" alt="burger">
-                    </figure>
+                    
                 </ul>
+                <figure id="burger">
+                    <img src="./img/menu (1).png" alt="burger">
+                </figure>
+                <div id="menu-mobil">
+                    <figure>
+                        <img src="./img/entree-de-la-date.png" alt="agenda">
+                    </figure>
+                    <figure>
+                        <img src="./img/icons8-envelope-96.png" alt="envelope">
+                    </figure>
+                    <figure>
+                        <img src="./img/icons8-iphone-se-96.png" alt="">
+                    </figure>
+                </div>
             </nav>
         </header>
         <main></main>
