--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                     <img src="./img/menu (1).png" alt="burger">
                 </figure>
                 <div id="menu-mobil">
-                    <figure>
-                        <img src="./img/entree-de-la-date.png" alt="agenda">
+                    <figure class="icon">
+                        <img class="nav-image" src="./img/entree-de-la-date.png" alt="agenda">
                     </figure>
-                    <figure>
-                        <img src="./img/icons8-envelope-96.png" alt="envelope">
+                    <figure class="icon">
+                        <img class="nav-image" src="./img/icons8-envelope-96.png" alt="envelope">
                     </figure>
-                    <figure>
-                        <img src="./img/icons8-iphone-se-96.png" alt="">
+                    <figure class="icon">
+                        <img class="nav-image" src="./img/icons8-iphone-se-96.png" alt="">
                     </figure>
                 </div>
             </nav>
