--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div id="largeur-max">
         <header>
-            <div>
+            <div id="desktop">
                 <figure>
                     <img id="logo" src="./img/logo.png" alt="">
                 </figure>
@@ -28,7 +28,7 @@
             </div>
 
 
-            <nav>
+            <nav id="menu">
                 <ul>
                     <li><a href="#">Accueil</a></li>
                     <li id="prestations">Nos prestations
@@ -45,6 +45,9 @@
                     <li><a href="#">CONTACT ET RESERVATION</a></li>
                     
                 </ul>
+                
+            </nav>
+            <div id="mobil">
                 <figure id="burger">
                     <img src="./img/menu (1).png" alt="burger">
                 </figure>
@@ -59,11 +62,12 @@
                         <img class="nav-image" src="./img/icons8-iphone-se-96.png" alt="">
                     </figure>
                 </div>
-            </nav>
+            </div>
         </header>
         <main></main>
         <footer></footer>
     </div>
+    <script src="./script.js"></script>
 </body>
 
 </html>
