--- a/index.html
+++ b/index.html
@@ -38,8 +38,12 @@
                             <li><a href="#">Sourcils</a></li>
                             <li><a href="#">Soin du visage</a></li>
                             <li><a href="#">Tricopigmentation</a></li>
+                            <div id="croix2">X</div>
                             
                         </ul>
+                        <figure id="triangle">
+                            <img src="./img/down-filled-triangular-arrow.png" alt="triangle">
+                        </figure>
                     </li>
                     <li><a href="#">LA CROLIPOLYSE</a></li>
                     <li><a href="#">LE SALON</a></li>
