--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <nav id="menu">
                 <ul>
                     <li><a href="#">Accueil</a></li>
-                    <li id="prestations">Nos prestations
+                    <li id="prestations">
+                        <p>Nos prestations</p> 
                         <ul id="sousmenu">
                             <li><a href="#">Lévres</a></li>
                             <li><a href="#">Yeux</a></li>
@@ -39,10 +40,13 @@
                             <li><a href="#">Soin du visage</a></li>
                             <li><a href="#">Tricopigmentation</a></li>
                             <div id="croix2">X</div>
+                            <figure id="fleche">
+                                <img src="./img/fleche-gauche.png" alt="fleche">
+                            </figure>
                             
                         </ul>
                         <figure id="triangle">
-                            <img src="./img/down-filled-triangular-arrow.png" alt="triangle">
+                            <img src="./img/fleche-gauche.png" alt="triangle">
                         </figure>
                     </li>
                     <li><a href="#">LA CROLIPOLYSE</a></li>
@@ -69,7 +73,32 @@
                 </div>
             </div>
         </header>
-        <main></main>
+        <main>
+            <section id="section1">
+                <div class="presentation">
+                    <figure class="ronde">
+                        <img class="circle" src="./img/slide_bulle-de-beaute.jpg" alt="salon">
+                    </figure>
+                    <article class="description"></article>
+                    <button class="decouvrir"></button>
+
+                </div>
+                <div class="presentation">
+                    <figure class="ronde">
+                        <img class="circle" src="./img/slide_boutique.jpg" alt="salon">
+                    </figure>
+                    <article class="description"></article>
+                    <button class="decouvrir"></button>
+                </div>
+                <div class="presentation">
+                    <figure class="ronde">
+                        <img class="circle" src="./img/istockphoto-921797424-612x612.jpg" alt="salon">
+                    </figure>
+                    <article class="description"></article>
+                    <button class="decouvrir"></button>
+                </div>
+            </section>
+        </main>
         <footer></footer>
     </div>
     <script src="./script.js"></script>
