--- a/index.html
+++ b/index.html
@@ -79,24 +79,78 @@
                     <figure class="ronde">
                         <img class="circle" src="./img/slide_bulle-de-beaute.jpg" alt="salon">
                     </figure>
-                    <article class="description"></article>
-                    <button class="decouvrir"></button>
+                    <article class="description">
+                        <h2 class="titre">NOTRE SALON</h2>
+                        <p class="text">
+                            Lotus vous accueille au cœur du 6ème arrondissement de Lyon - les Brotteaux, 106 boulevard des Belges. Venez découvrir nos 90 m² dédiés à votre bien-être.
+                        </p>
+                    </article>
+                    <button class="decouvrir">découvrir</button>
 
                 </div>
                 <div class="presentation">
                     <figure class="ronde">
                         <img class="circle" src="./img/slide_boutique.jpg" alt="salon">
                     </figure>
-                    <article class="description"></article>
-                    <button class="decouvrir"></button>
+                    <article class="description">
+                        <h2 class="titre">
+                            NOS PRODUITS
+                        </h2>
+                        <p class="text">
+                            Lotus vous propose une gamme de produits de qualité faites dans notre attelierpour prondre soin de votre visage et votre corps.
+                        </p>
+                    </article>
+                    <button class="decouvrir">découvrir</button>
                 </div>
                 <div class="presentation">
                     <figure class="ronde">
                         <img class="circle" src="./img/istockphoto-921797424-612x612.jpg" alt="salon">
                     </figure>
-                    <article class="description"></article>
-                    <button class="decouvrir"></button>
+                    <article class="description">
+                        <h2 class="titre">
+                            LA CROLIPOLYSE
+                        </h2>
+                        <p class="text">
+                            Cryolopolyse, ou l’amincissement par le froid. Vous rêvez de vous débarrasser de vos cellules graisseuses sans passer par la case liposuccion ? La cryolopolyse est faite pour vous ! Venez la découvrir ...
+                        </p>
+                    </article>
+                    <button class="decouvrir">découvrir
+                    </button>
                 </div>
+            </section>
+            <section id="section2">
+                <h2>NOS PRESTATIONS</h2>
+                <div id="figures">
+                    <a href="#" class="sevises">
+                        <h2 class="lien">Lévres</h2>
+                        <img class="image" src="./img/Lèvres-1.webp" alt="Lèvres">
+                    </a>
+                    <a href="#" class="sevises">
+                        <h2 class="lien">Yeux</h2>
+                        <img class="image" src="./img/causes-affaissement-visage.jpg" alt="visage">
+                    </a>
+                    <a href="#" class="sevises">
+                        <h2 class="lien">Sourcils</h2>
+                        <img class="image" src="./img/img01.png" alt="Sourcils">
+                    </a>
+                    <a href="#" class="sevises">
+                        <h2 class="lien">Soin du visage</h2>
+                        <img class="image" src="./img/2.jpg" alt="visage">
+                    </a>
+                    <a href="#" class="sevises">
+                        <h2 class="lien">Tricopigmentation</h2>
+                        <img class="image" src="./img/ChapitreTRICOPIGMENTATIONjpg_629479f185e0c.jpg" alt="Tricopigmentation">
+                    </a>
+                </div>
+                
+            </section>
+            <section id="section3">
+                <div id="fomulaire">
+
+                </div>
+                <figure id="carte">
+                    <img src="./img/Capture d’écran 2023-01-24 154425.png" alt="carte">
+                </figure>
             </section>
         </main>
         <footer></footer>
