--- a/index.html
+++ b/index.html
@@ -146,6 +146,22 @@
             </section>
             <section id="section3">
                 <div id="fomulaire">
+                    <h2>RESERVER UN RENDEZ-VOUS</h2>
+                    <form>
+                        <div class="checkbox">
+                            <label class="sex">homme
+                                <input type="checkbox">
+                                <span class="grand"></span>
+                            </label>
+                        </div>
+                        <div class="checkbox">
+                            <label class="sex">famme
+                                <input type="checkbox"> 
+                                <span class="grand"></span>
+                            </label>
+                        </div>
+                        
+                    </form>
 
                 </div>
                 <figure id="carte">
