--- a/index.html
+++ b/index.html
@@ -123,23 +123,23 @@
                 <div id="figures">
                     <a href="#" class="sevises">
                         <h2 class="lien">Lévres</h2>
-                        <img class="image" src="./img/Lèvres-1.webp" alt="Lèvres">
+                        <img class="image" src="./img/Lèvres-1 2.png" alt="Lèvres">
                     </a>
                     <a href="#" class="sevises">
                         <h2 class="lien">Yeux</h2>
-                        <img class="image" src="./img/causes-affaissement-visage.jpg" alt="visage">
+                        <img class="image" src="./img/causes-affaissement-visage 2.png" alt="visage">
                     </a>
                     <a href="#" class="sevises">
                         <h2 class="lien">Sourcils</h2>
-                        <img class="image" src="./img/img01.png" alt="Sourcils">
+                        <img class="image" src="./img/img01 2.png" alt="Sourcils">
                     </a>
                     <a href="#" class="sevises">
                         <h2 class="lien">Soin du visage</h2>
-                        <img class="image" src="./img/2.jpg" alt="visage">
+                        <img class="image" src="./img/2 2.png" alt="visage">
                     </a>
                     <a href="#" class="sevises">
                         <h2 class="lien">Tricopigmentation</h2>
-                        <img class="image" src="./img/ChapitreTRICOPIGMENTATIONjpg_629479f185e0c.jpg" alt="Tricopigmentation">
+                        <img class="image" src="./img/ChapitreTRICOPIGMENTATIONjpg_629479f185e0c 2.png" alt="Tricopigmentation">
                     </a>
                 </div>
                 
