--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div id="largeur-max">
         <header>
             <div id="desktop">
+                <h1>Salon Lotus</h1>
                 <figure>
                     <img id="logo" src="./img/logo.png" alt="">
                 </figure>
@@ -79,6 +80,7 @@
                     <figure class="ronde">
                         <img class="circle" src="./img/slide_bulle-de-beaute.jpg" alt="salon">
                     </figure>
+                    
                     <article class="description">
                         <h2 class="titre">NOTRE SALON</h2>
                         <p class="text">
